--- a/index.html
+++ b/index.html
@@ -1,1 +1,122 @@
+<!DOCTYPE html>
+<html style="width:60%;position:absolute;left:0;right:0;margin:0 auto">
+<html lang="en">
+	
+<head>
+  <title> ICFEM 2023 / SOFL+MSVL </title>
+</head>
 
+<body>  
+<center>	
+<ul style="height:100px;width:100%;list-style-type:none">  
+	<li style="float:left;margin:40px"><a href="#call">Call for Papers<a></li>
+	<li style="float:left;margin:40px"><a href="#commit">Committee<a></li>
+	 <li style="float:left;margin:40px"><a href="#prog">Program<a></li>
+	 <li style="float:left;margin:40px"><a href="#part">Participation<a></li>
+</ul>
+</center>
+
+<header>
+<h1 style="color:DarkBlue"><center> SOFL+MSVL 2023</center></h1>
+<h2><center> The 12th international workshop on SOFL + MSVL for Reliability and Security</center></h2>
+<h3 style="font-weight:normal"><center>An <a href="https://formal-analysis.com/icfem/2023/">ICFEM 2023</a> satellite workshop, Brisbane, Australia, 21 November 2023</center>
+</h3> 
+		 
+<p>
+SOFL+MSVL is an annual workshop on formal engineering methods in relation to the SOFL method and the MSVL method. 
+SOFL stands for Structured Object-Oriented Formal Language and SOFL method is a representative formal engineering method. 
+MSVL stands for Modelling, Specification, and Verification Language that supports temporary logic-based modeling and specification as well as model checking for verification. 
+This workshop is always organized as a satellite event of International Conference on Formal Engineering Methods (ICFEM).
+SOFL+MSVL 2023 is the 12th workshop in the workshop series.
+</center>
+</p>
+
+<section id="call">	
+<h2><center> Call for Papers</center></h2>
+<h3 style="color:DarkBlue">Background and Objectives:</h3>
+<p>
+There is a growing interest in applying formal methods in practice to improve software reliability and security, but only with a few exceptions, this interest has not been successfully converted into the reality. How to enable practitioners to use formal techniques easily and effectively still remains challenging.  
+The Structured Object-Oriented Formal Language (SOFL) has been developed to address this challenge by providing a comprehensible specification language, a practical modeling method, various verification and validation techniques, and tool support through effective integration of formal methods with conventional software engineering techniques. The Modeling, Simulation and Verification Language (MSVL) is a parallel programming language, and its supporting toolkit MSV has been developed to enable us to model, simulate and verify a system in a formal manner. <br> 
+This workshop aims to continuously promote the development and combinations of the SOFL formal engineering method and the formal method MSVL, as well as the applications of their fundamental principles or specific techniques to developing other formal engineering techniques. We expect to bring industrial, academic and government experts of SOFL and MSVL to communicate and to exchange ideas. Researchers, practitioners, tool developers and users, and technology transfer experts are all welcome. The scope of the interest includes, but not limited to, all the possible issues in relation to SOFL, MSVL, or their applications in both developing other formal engineering techniques and specific software systems. 
+</p>
+<h3 style="color:DarkBlue">Scope and Topics:</h3>
+<p>
+Modeling and specification<br>
+Integration of prototyping and formal specification<br>
+Integration of agile methods and formal specification<br>
+Specification inspection and verification<br>
+Specification animation<br>
+Automatic transformation<br>
+Specification-based inspection and verification<br>
+Specification-based testing<br>
+Evolution and refinement<br>
+Model checking<br>
+Software process<br>
+Project management<br>
+Service-oriented computing<br>
+Data intensive computing<br>
+Many core parallel computing<br>
+Security of software<br>
+Application<br>
+Semantics<br>
+Software tools
+</p>
+
+<h3 style="color:DarkBlue">Submission and Publication:</h3>
+<p>
+Submissions to the workshop can be done through the EasyChair system <a href="TBD"> TBD</a> and must not have been published or be concurrently considered for publication elsewhere. Papers must be written in English and should be no longer than 20 pages in Springer's LNCS format. The workshop proceedings will be published as an LNCS post-proceedings by Springer. 
+</p>
+</section>
+
+
+<h3 style="color:DarkBlue">Important Dates:</center></h3>
+<ul>
+<li>	Paper submission: <span style="color:red">31 September 2023<span></li>
+<li>	Acceptance/Rejection notification: 15 October 2023</li>
+<li>	Workshop: <span style="color:red">21 November<span> 2023</li>
+<li>	Camera ready Paper Due: 15 January 2024</li>
+</ul>
+
+
+<section id="commit">		 
+<h2><center>Organizing Committee</center></h2>
+<h3 style="color:DarkBlue">Program Chairs:</h3>
+<ul>
+<li>	Ai Liu, Hiroshima University, Japan</li>	
+<li>	Zhenhua Duan, Xidian University, China<br></li>
+<li>Shaoying Liu, Hiroshima University, Japan</li>
+</ul>
+<h3 style="color:DarkBlue">Program Committee: <span style="color:red">(To be confirmed)<span></h3>
+<p>
+    Yuting Chen, Shanghai Jiaotong University, China <br>
+
+    Busalire Emeka, Hosei University, Japan <br>
+
+    Kazuhiro Ogata, JAIST, Japan  <br>
+
+    Xinfeng Shu, Xi'an University of Posts and Telecomunications, China <br>
+
+   Rong Wang, Galileo Co. Ltd., Japan <br>
+
+    Xi Wang, Shanghai University, China <br>
+
+Xiaobing Wang, Xidian University, China <br>
+
+Bin Yu, Xidian University, China <br>
+	
+Zhen You, Jiangxi Normal University, China <br>
+	
+M. Saqib Nawaz, Shenzhen University, China <br>
+
+Xiyue Zhang, University of Oxford, England <br>
+</p>
+</section>
+
+<section id="prog">
+<h2><center>Program</center></h2>
+	<p> TBD </p>
+</section>
+</body>
+
+<section id="part">
+<h2><center>Participation</center></h2>
