--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 	
 <head>
-  <title> ICFEM 2023 / SOFL+MSVL </title>
+  <title> ICFEM 2023 / SOFL+MSVL 简历</title>
 </head>
 
 <body>  
