--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html style="width:60%;position:absolute;left:0;right:0;margin:0 auto">
-
+<html lang="zh-CN">
 	
 <head>
   <title> ICFEM 2023 / SOFL+MSVL 简历</title>
