--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ SOFL+MSVL is an annual workshop on formal engineering methods in relation to the
 SOFL stands for Structured Object-Oriented Formal Language and SOFL method is a representative formal engineering method. 
 MSVL stands for Modelling, Specification, and Verification Language that supports temporary logic-based modeling and specification as well as model checking for verification. 
 This workshop is always organized as a satellite event of International Conference on Formal Engineering Methods (ICFEM).
-SOFL+MSVL 2023 is the 12th workshop in the workshop series.
+SOFL+MSVL 2023 is the 12th workshop in the workshop series.中文
 </center>
 </p>
 
